--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -1,7 +1,94 @@
-<b>
-Yeah Django!
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Come &middot Share</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/index.css" rel="stylesheet" media="screen">
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 
-and Go ComeShare
-<b>
-<br />
-let's <a href="/admin">admin </a>
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="../../assets/js/html5shiv.js"></script>
+      <script src="../../assets/js/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+
+    <nav class="navbar navbar-default" role="navigation">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">ComeShare</a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse navbar-ex1-collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+        </ul>
+        <!--
+        <form class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+        -->
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Sign Up</a></li>
+          <li><a href="/admin">Admin</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </nav>
+
+    <div class="jumbotron">
+      <div class="container">
+        <div class="col-md-4">
+          <h3 id="slogan">Take control of your storage</h3>
+          <p>
+            <img id="driveIcon" src="./assets/images/Drive-Icon.png" />
+            <a href="https://drive.google.com" target="_newtab">Google Drive</a>
+          </p>
+          <p>
+            <img id="dropboxIcon" src="./assets/images/Dropbox.png" />
+            <a href="https://www.dropbox.com/home" target="_newtab">Dropbox</a>
+          </p>
+          <p>
+            <img id="skydriveIcon" src="./assets/images/skydrive.png" />
+            <a href="https://skydrive.live.com" target="_newtab">Skydrive</a>
+          </p>
+        </div>
+        <div class="col-md-4 col-md-offset-3">
+          <div>
+            <form role="form">
+              <div class="form-group">
+                <label for="signin">Sign in</label>
+                <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+              </div>
+              <div class="form-group">
+                <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+              </div>
+              <div id="formButtons">
+                <button id="submit" type="submit" class="btn btn-default">Submit</button>
+                <button id="signup" type="signUp" class="btn btn-default">Sign Up</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="//code.jquery.com/jquery.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
+</html>
