Fixing html/css names

--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -3,7 +3,7 @@
   <head>
     <title>Come &middot Share</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/index.css" rel="stylesheet" media="screen">
+    <link href="css/home.css" rel="stylesheet" media="screen">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 
