--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -1,12 +1,14 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
   <head>
     <title>Come &middot Share</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/home.css" rel="stylesheet" media="screen">
+    <link href="" rel="stylesheet" media="screen">
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet" media="screen">
 
+    {% load static from staticfiles %}
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="../../assets/js/html5shiv.js"></script>
@@ -48,6 +50,7 @@
       </div><!-- /.navbar-collapse -->
     </nav>
 
+
     <div class="jumbotron">
       <div class="container">
         <div class="col-md-4">
@@ -61,7 +64,8 @@
             <a href="https://www.dropbox.com/home" target="_newtab">Dropbox</a>
           </p>
           <p>
-            <img id="skydriveIcon" src="./assets/images/skydrive.png" />
+            <a href="{{ STATIC_URL }}assets/images/skydrive.png" />
+            <img id="skydriveIcon" src="{% static "images/skydrive.png" %}" />
             <a href="https://skydrive.live.com" target="_newtab">Skydrive</a>
           </p>
         </div>
