--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -4,11 +4,10 @@
   <head>
     <title>Come &middot Share</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="" rel="stylesheet" media="screen">
+    <link href="{% static "css/home.css" %}" rel="stylesheet" media="screen">
     <!-- Bootstrap -->
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet" media="screen">
 
-    {% load static from staticfiles %}
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="../../assets/js/html5shiv.js"></script>
@@ -56,16 +55,15 @@
         <div class="col-md-4">
           <h3 id="slogan">Take control of your storage</h3>
           <p>
-            <img id="driveIcon" src="./assets/images/Drive-Icon.png" />
+            <img id="driveIcon" src="{% static "assets/images/Drive-Icon.png" %}" />
             <a href="https://drive.google.com" target="_newtab">Google Drive</a>
           </p>
           <p>
-            <img id="dropboxIcon" src="./assets/images/Dropbox.png" />
+            <img id="dropboxIcon" src="{% static "assets/images/dropbox.png" %}" />
             <a href="https://www.dropbox.com/home" target="_newtab">Dropbox</a>
           </p>
           <p>
-            <a href="{{ STATIC_URL }}assets/images/skydrive.png" />
-            <img id="skydriveIcon" src="{% static "images/skydrive.png" %}" />
+            <img id="skydriveIcon" src="{% static "assets/images/skydrive.png" %}" />
             <a href="https://skydrive.live.com" target="_newtab">Skydrive</a>
           </p>
         </div>
