--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -25,14 +25,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">ComeShare</a>
+        <a class="navbar-brand" href="/">ComeShare</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/marketplace">Marketplace</a></li>
         </ul>
         <!--
         <form class="navbar-form navbar-left" role="search">
@@ -43,30 +43,35 @@
         </form>
         -->
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Sign Up</a></li>
           <li><a href="/admin">Admin</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </nav>
 
-
     <div class="jumbotron">
       <div class="container">
         <div class="col-md-4">
           <h3 id="slogan">Take control of your storage</h3>
-          <p>
-            <img id="driveIcon" src="{% static "assets/images/Drive-Icon.png" %}" />
-            <a href="https://drive.google.com" target="_newtab">Google Drive</a>
-          </p>
-          <p>
-            <img id="dropboxIcon" src="{% static "assets/images/dropbox.png" %}" />
-            <a href="https://www.dropbox.com/home" target="_newtab">Dropbox</a>
-          </p>
-          <p>
-            <img id="skydriveIcon" src="{% static "assets/images/skydrive.png" %}" />
-            <a href="https://skydrive.live.com" target="_newtab">Skydrive</a>
-          </p>
+          <div id="providers">
+            <p>
+              <div class="row">
+                <img id="driveIcon" src="{% static "assets/images/Drive-Icon.png" %}" />
+                <a href="https://drive.google.com" target="_newtab">Google Drive</a>
+              </div>
+            </p>
+            <p>
+              <div class="row">
+                <img id="dropboxIcon" src="{% static "assets/images/dropbox.png" %}" />
+                <a href="https://www.dropbox.com/home" target="_newtab">Dropbox</a>
+              </div>
+            </p>
+            <p>
+              <img id="skydriveIcon" src="{% static "assets/images/skydrive.png" %}" />
+              <a href="https://skydrive.live.com" target="_newtab">Skydrive</a>
+            </p>
+          </div>
         </div>
+
         <div class="col-md-4 col-md-offset-3">
           <div>
             <form role="form">
