sync html files

--- a/wsgi/openshift/bootstrap_statics/static/css/home.css
+++ b/wsgi/openshift/bootstrap_statics/static/css/home.css
@@ -27,3 +27,12 @@
 #providers .row img {
 	padding-right: 20px;
 }
+
+table {
+	text-align: center;
+	margin: auto;
+}
+
+table tr {
+	margin:auto;
+}
