--- a/wsgi/openshift/templates/home/about.html
+++ b/wsgi/openshift/templates/home/about.html
@@ -33,6 +33,8 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">About</a></li>
           <li><a href="/marketplace">Marketplace</a></li>
+          <li><a href="http://bbs.comeshare.net">Support-Forum</a>
+          <li><a href="http://blog.comeshare.net">Blog</a>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/admin">Admin</a></li>
