--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -46,6 +46,7 @@
         -->
 
         <ul class="nav navbar-nav navbar-right">
+          <li><a href="/user">Profile</a></li>
           <li><a href="/admin">Admin</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
@@ -55,24 +56,21 @@
       <div class="container">
         <div class="col-md-4">
           <h3 id="slogan">Take control of your storage</h3>
-          <div id="providers">
-            <p>
-              <div class="row">
-                <img id="driveIcon" src="{% static "assets/images/Drive-Icon.png" %}" />
-                <a href="https://drive.google.com" target="_newtab">Google Drive</a>
-              </div>
-            </p>
-            <p>
-              <div class="row">
-                <img id="dropboxIcon" src="{% static "assets/images/dropbox.png" %}" />
-                <a href="https://www.dropbox.com/home" target="_newtab">Dropbox</a>
-              </div>
-            </p>
-            <p>
-              <img id="skydriveIcon" src="{% static "assets/images/skydrive.png" %}" />
-              <a href="https://skydrive.live.com" target="_newtab">Skydrive</a>
-            </p>
-          </div>
+          <table class="table table-condensed">
+            <thead></thead>
+            <tr>
+              <td><img id="driveIcon" src="{% static "assets/images/Drive-Icon.png" %}" /></td>
+              <td><p>Google Drive</p></td>
+            </tr>
+            <tr>
+              <td><img id="dropboxIcon" src="{% static "assets/images/dropbox.png" %}" /></td>
+              <td><p>Dropbox</p></td>
+            </tr>
+            <tr>
+              <td><img id="skydriveIcon" src="{% static "assets/images/skydrive.png" %}" /></td>
+              <td><p>SkyDrive</p></td>
+            </tr>
+          </table>          
         </div>
 
         <div class="col-md-4 col-md-offset-3">
@@ -94,6 +92,7 @@
         </div>
       </div>
     </div>
+
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
