--- a/wsgi/openshift/templates/home/user.html
+++ b/wsgi/openshift/templates/home/user.html
@@ -4,7 +4,7 @@
   <head>
     <title>Come &middot Share</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="{% static "css/marketplace.css" %}" rel="stylesheet" media="screen">
+    <link href="{% static "css/home.css" %}" rel="stylesheet" media="screen">
     <!-- Bootstrap -->
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet" media="screen">
 
@@ -32,67 +32,28 @@
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
           <li><a href="/about">About</a></li>
-          <li class="active"><a href="#">Marketplace</a></li>
+          <li><a href="/marketplace">Marketplace</a></li>
           <li><a href="http://bbs.comeshare.net">Support-Forum</a>
           <li><a href="http://blog.comeshare.net">Blog</a>
         </ul>
+        <!--
+        <form class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+        -->
+
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/user">Profile</a></li>
+          <li class="active"><a href="/user">Profile</a></li>
           <li><a href="/admin">Admin</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </nav>
 
-    <div class="jumbotron">
-    	<div class="container">
-    		<div class="row">
-				<div class="col-sm-6 col-md-4">
-			    	<div class="panel">
-			    		<h2> Google </h2>
-			    		<p>&middot 15 GB</p>
-			    		<p>&middot 100 GB</p>
-			    		<a href="#" class="btn btn-primary">Purchase</a>
-			    	</div>
-				</div>
-				<div class="col-sm-6 col-md-4">
-			    	<div class="panel">
-			    		<h2> SkyDrive </h2>
-			    		<p>&middot 15 GB</p>
-			    		<p>&middot 100 GB</p>
-			    		<a href="#" class="btn btn-primary">Purchase</a>
-			    	</div>
-				</div>
-				<div class="col-sm-6 col-md-4">
-			    	<div class="panel">
-			    		<h2> Box </h2>
-			    		<p>&middot 15 GB</p>
-			    		<p>&middot 100 GB</p>
-			    		<a href="#" class="btn btn-primary">Purchase</a>
-			    	</div>
-				</div>
-    		</div>
-    	</div>
-    </div>
+    
 
-    <div id="usage" class="jumbotron">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-sm-6 col-md-4 col-md-offset-2">
-            <div class="panel">
-              <h3>Your usage breakdown</h3>
-              <img id="cloudusage" src="{% static "assets/images/cloudusage.png" %}">
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4">
-            <div class="panel">
-              <h3>Your overall usage</h3>
-              <img id="cloudusage" src="{% static "assets/images/totalusage.png" %}">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="//code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
