--- a/wsgi/openshift/bootstrap_statics/static/css/home.css
+++ b/wsgi/openshift/bootstrap_statics/static/css/home.css
@@ -30,9 +30,14 @@
 
 table {
 	text-align: center;
-	margin: auto;
+
 }
 
 table tr {
-	margin:auto;
+	
+}
+
+#tableImage {
+	max-width: 150px;
+	max-height: 100px;
 }
