--- a/wsgi/openshift/templates/home/about.html
+++ b/wsgi/openshift/templates/home/about.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Come &middot Share</title>
+    <title>Cloud &middot Control</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{% static "css/about.css" %}" rel="stylesheet" media="screen">
     <!-- Bootstrap -->
@@ -25,7 +25,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">ComeShare</a>
+        <a class="navbar-brand" href="/">CloudControl</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -37,14 +37,26 @@
           <li><a href="http://blog.comeshare.net">Blog</a>
         </ul>
         <ul class="nav navbar-nav navbar-right">
+          <li><a href="/user">Profile</a></li>
           <li><a href="/admin">Admin</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </nav>
 
     <div class="jumbotron">
-    	<div class="container">
-    		<h1> About Come Share </h1>
+    	<div id="about" class="container">
+    		<h1> About Cloud Control</h1>
+        <p> Manage all your cloud storage from one login with <strong>Cloud Control</strong>. Connect to multiple services like Google Drive, Dropbox, and SkyDrive using one simple interface.
+        </p>
+        <ul>
+          <li>Store and access your files across multiple cloud-based services.</li>
+          <li>Copy and move files from one service to another without downloading to your computer.
+          </li>
+          <li>Share files with your friends and collegues.
+          </li>
+          <li>Supersize your free cloud storage <i>(create your own supercloud)</i>
+          </li>
+        </ul>
     	</div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
