--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Come &middot Share</title>
+    <title>Cloud &middot Control</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{% static "css/home.css" %}" rel="stylesheet" media="screen">
     <!-- Bootstrap -->
@@ -25,9 +25,8 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">ComeShare</a>
+        <a class="navbar-brand" href="/">CloudControl</a>
       </div>
-
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
@@ -36,15 +35,6 @@
           <li><a href="http://bbs.comeshare.net">Support-Forum</a>
           <li><a href="http://blog.comeshare.net">Blog</a>
         </ul>
-        <!--
-        <form class="navbar-form navbar-left" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
-        -->
-
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/user">Profile</a></li>
           <li><a href="/admin">Admin</a></li>
@@ -59,20 +49,19 @@
           <table class="table table-condensed">
             <thead></thead>
             <tr>
-              <td><img id="driveIcon" src="{% static "assets/images/Drive-Icon.png" %}" /></td>
-              <td><p>Google Drive</p></td>
+              <td id="tableImage"><img id="driveIcon" src="{% static "assets/images/Drive-Icon.png" %}" /></td>
+              <td><a href="https://drive.google.com">Google Drive</td>
             </tr>
             <tr>
-              <td><img id="dropboxIcon" src="{% static "assets/images/dropbox.png" %}" /></td>
-              <td><p>Dropbox</p></td>
+              <td id="tableImage"><img id="dropboxIcon" src="{% static "assets/images/dropbox.png" %}" /></td>
+              <td><a href="https://www.dropbox.com">Dropbox</td>
             </tr>
             <tr>
-              <td><img id="skydriveIcon" src="{% static "assets/images/skydrive.png" %}" /></td>
-              <td><p>SkyDrive</p></td>
+              <td id="tableImage"><img id="skydriveIcon" src="{% static "assets/images/skydrive.png" %}" /></td>
+              <td><a href="https://skydrive.live.com">SkyDrive</td>
             </tr>
           </table>          
         </div>
-
         <div class="col-md-4 col-md-offset-3">
           <div>
             <form role="form">
@@ -92,8 +81,6 @@
         </div>
       </div>
     </div>
-
-
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="//code.jquery.com/jquery.js"></script>
