--- a/wsgi/openshift/templates/home/user.html
+++ b/wsgi/openshift/templates/home/user.html
@@ -1,62 +1,69 @@
+{% extends "base.html" %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Come &middot Share</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="{% static "css/home.css" %}" rel="stylesheet" media="screen">
-    <!-- Bootstrap -->
-    <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet" media="screen">
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="../../assets/js/html5shiv.js"></script>
-      <script src="../../assets/js/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
+{% block title %}MyShare{% endblock %}
 
-    <nav class="navbar navbar-default" role="navigation">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">ComeShare</a>
-      </div>
+{% block content %}
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse navbar-ex1-collapse">
-        <ul class="nav navbar-nav">
-          <li><a href="/about">About</a></li>
-          <li><a href="/marketplace">Marketplace</a></li>
-          <li><a href="http://bbs.comeshare.net">Support-Forum</a>
-          <li><a href="http://blog.comeshare.net">Blog</a>
-        </ul>
-        <!--
-        <form class="navbar-form navbar-left" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
-        -->
+<div class="container">
 
-        <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="/user">Profile</a></li>
-          <li><a href="/admin">Admin</a></li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </nav>
+      <div class="row row-offcanvas row-offcanvas-left">
 
-    
+        <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
+          <div class="well sidebar-nav">
+            <ul class="nav">
+              <li><a href="#">[Upload]</a></li>
+              <li><a href="#">[Google Drive]</a></li>
+              <li><a href="#">[Skydrive]</a></li>
+              <li><a href="#">[Dropbox]</a></li>
+              <li><a href="#">Tags</a>
+                <ul>
+                  <li><a href="#">EECS</a></li>
+                  <li><a href="#">Math</a></li>
+                  <li><a href="#">Wedding</a></li>
+                  <li class="add-lable"><a href="#">Add...</a></li>
+                </ul>
+              </li>
+              <li><a href="#">20% Full</a><a href="#">Buy more space</a></li>
+            </ul>
+          </div><!--/.well -->
+        </div><!--/span-->
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="//code.jquery.com/jquery.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-  </body>
-</html>
+        <div class="col-xs-6 col-sm-9">
+            <div class="row">
+                <div class="col-md-4">
+                    <input name="q" type="text" class="search-text" />
+                </div>
+                <div class="col-md-2"><a href="#">[Notifications]</a></div>
+                <div class="col-md-2"><a href="#">[Settings]</a></div>
+                <div class="col-md-2"><a href="#">[ViewList]</a><a href="#">[ViewGrid]</a></div>
+                <div class="col-md-2"><a href="#">[Share]</a></div>
+            </div>
+
+            <hr />
+
+            <div class="row">
+                <div class="col-md-4"><a href="#">Video</a></div>
+                <div class="col-md-4"><a href="#">Picture</a></div>
+                <div class="col-md-4"><a href="#">Document</a></div>
+            </div>
+
+            <hr />
+
+            <div class="row">
+                {% for file in files %}
+                <div class="col-xs-4 col-sm-3 col-md-2">
+                    <a href="#"><img src="{{ "/static/assets/images/" | add:file.type | add:".png" }}" alt="{{ file.type | title }}" /></a><br />
+                    <a href="{{ file.link }}">{{ file.name }}</a><br />
+                    <a href="#">
+                        {{ file.tags | join:", " }}
+                    </a>
+                </div>
+                {% endfor %}
+            </div><!--/row-->
+        </div><!--/span-->
+      </div><!--/row-->
+
+    </div><!--/.container-->
+
+{% endblock %}
