--- a/wsgi/openshift/templates/home/user.html
+++ b/wsgi/openshift/templates/home/user.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 
-{% block title %}MyShare{% endblock %}
+{% block page_title %}MyCloud{% endblock %}
 
 {% block content %}
 
