--- a/wsgi/openshift/templates/404.html
+++ b/wsgi/openshift/templates/404.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %}Page not found{% endblock %}
+{% block page_title %}Page not found{% endblock %}
 
 {% block content %}
 	<h1>Page not found</h1>
