--- a/wsgi/openshift/templates/home/about.html
+++ b/wsgi/openshift/templates/home/about.html
@@ -1,47 +1,9 @@
+{% extends "base.html" %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Cloud &middot Control</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="{% static "css/about.css" %}" rel="stylesheet" media="screen">
-    <!-- Bootstrap -->
-    <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet" media="screen">
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="../../assets/js/html5shiv.js"></script>
-      <script src="../../assets/js/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
+{% block page_title %}About{% endblock %}
 
-    <nav class="navbar navbar-default" role="navigation">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">CloudControl</a>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse navbar-ex1-collapse">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">About</a></li>
-          <li><a href="/marketplace">Marketplace</a></li>
-          <li><a href="http://bbs.comeshare.net">Support-Forum</a>
-          <li><a href="http://blog.comeshare.net">Blog</a>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="/user">Profile</a></li>
-          <li><a href="/admin">Admin</a></li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </nav>
+{% block content %}
 
     <div class="jumbotron">
     	<div id="about" class="container">
@@ -59,9 +21,5 @@
         </ul>
     	</div>
     </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="//code.jquery.com/jquery.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-  </body>
-</html>
+
+{% endblock %}
