static css files

--- a/wsgi/openshift/templates/home/about.html
+++ b/wsgi/openshift/templates/home/about.html
@@ -4,6 +4,7 @@
 {% block page_title %}About{% endblock %}
 
 {% block content %}
+<link href="{% static "css/about.css" %}" rel="stylesheet" media="screen">
 
     <div class="jumbotron">
     	<div id="about" class="container">
