--- a/wsgi/openshift/templates/marketplace.html
+++ b/wsgi/openshift/templates/marketplace.html
@@ -4,6 +4,8 @@
 {% block page_title %}Marketplace{% endblock %}
 
 {% block content %}
+<link href="{% static "css/marketplace.css" %}" rel="stylesheet" media="screen">
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 
     <div class="jumbotron">
     	<div class="container">
