--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -33,6 +33,8 @@
         <ul class="nav navbar-nav">
           <li><a href="/about">About</a></li>
           <li><a href="/marketplace">Marketplace</a></li>
+          <li><a href="http://bbs.comeshare.net">Support-Forum</a>
+          <li><a href="http://blog.comeshare.net">Blog</a>
         </ul>
         <!--
         <form class="navbar-form navbar-left" role="search">
@@ -42,6 +44,22 @@
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
         -->
+        <form method="post" action="{% url 'django.contrib.auth.views.login' %}">{% csrf_token %}
+			<table>
+			<tr>
+			    <td>{{ form.username.label_tag }}</td>
+			    <td>{{ form.username }}</td>
+			</tr>
+			<tr>
+			    <td>{{ form.password.label_tag }}</td>
+			    <td>{{ form.password }}</td>
+			</tr>
+			</table>
+			
+			<input type="submit" value="login" />
+			<input type="hidden" name="next" value="{{ next }}" />
+		</form>
+        
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/admin">Admin</a></li>
         </ul>
