--- a/wsgi/openshift/templates/base.html
+++ b/wsgi/openshift/templates/base.html
@@ -26,12 +26,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">CloudControl</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
+          <li><a class="navbar-brand" href="/"><img src="{% static "assets/images/logo.png" %}" alt="CloudControl" style="height: 25px;" /></a></li>
           <li><a href="/about">About</a></li>
           <li><a href="/marketplace">Marketplace</a></li>
           <li><a href="http://bbs.comeshare.net">Support-Forum</a>
