fixed upload logo

--- a/wsgi/openshift/templates/home/user.html
+++ b/wsgi/openshift/templates/home/user.html
@@ -22,7 +22,7 @@
         display: block;
     }
 </style>
-              <li><a href="#">[Upload]</a></li>
+              <li><a href="#"><img id="UploadIcon" src="{% static "assets/images/upload.png" %}" /></a></li>
               <li><a href="#"><img class="provider-logo" id="driveIcon" src="{% static "assets/images/Drive-Icon.png" %}" /><label class="label-text">Google Drive</label></a></li>
               <li><a href="#"><img class="provider-logo" id="skydriveIcon" src="{% static "assets/images/skydrive.png" %}" /><label class="label-text">Skydrive</label></a></li>
               <li><a href="#"><img class="provider-logo" id="dropboxIcon" src="{% static "assets/images/dropbox.png" %}" /><label class="label-text">Dropbox</label></a></li>
