--- a/wsgi/openshift/templates/home/user.html
+++ b/wsgi/openshift/templates/home/user.html
@@ -64,7 +64,7 @@
                 {% for file in files %}
                 <div class="col-xs-4 col-sm-3 col-md-2">
                     <a href="#"><img src="{{ "/static/assets/images/"|add:file.type|add:".png" }}" alt="{{ file.type|title }}" /></a><br />
-                    <a href="{{ file.link }}">{{ file.name }}</a><br />
+                    <a href="{{ file.link }}" target="_blank">{{ file.name }}</a><br />
                     <a href="#">
                         {{ file.tags|join:", " }}
                     </a>
