--- a/wsgi/openshift/bootstrap_statics/static/css/home.css
+++ b/wsgi/openshift/bootstrap_statics/static/css/home.css
@@ -1,5 +1,6 @@
 .jumbotron {
 	margin-top: -1em; /*Eliminates 'dead' space between nav & jumbotron*/
+	text-align: center;
 }
 
 #driveIcon {
@@ -35,4 +36,13 @@ table {
 #tableImage {
 	max-width: 150px;
 	max-height: 100px;
+}
+
+#logo {
+	margin-bottom: -4em;
+	margin-top: -2em;
+}
+
+#logoImage {
+	height:250px;
 }
