--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -5,6 +5,9 @@
 
 {% block content %}
 
+    <div id="logo" class="jumbotron">
+      <img id="logoImage" src="{% static "assets/images/logo.png" %}" />
+    </div>
     <div class="jumbotron">
       <div class="container">
         <div class="col-md-4">
