--- a/wsgi/openshift/templates/base.html
+++ b/wsgi/openshift/templates/base.html
@@ -34,8 +34,8 @@
           <li><a class="navbar-brand" href="/"><img src="{% static "assets/images/logo.png" %}" alt="CloudControl" style="height: 25px;" /></a></li>
           <li><a href="/about">About</a></li>
           <li><a href="/marketplace">Marketplace</a></li>
-          <li><a href="http://bbs.comeshare.net">Support-Forum</a>
-          <li><a href="http://blog.comeshare.net">Blog</a>
+          <li><a href="http://bbs.comeshare.net" target="_blank">Support</a>
+          <li><a href="http://blog.comeshare.net" target="_blank">Blog</a>
         </ul>
         <!--
         <form class="navbar-form navbar-left" role="search">
