resized some icon and update the image

--- a/wsgi/openshift/templates/marketplace.html
+++ b/wsgi/openshift/templates/marketplace.html
@@ -50,6 +50,16 @@
             </div>
           </div>
         </div>
+        
+        <div class="row">
+          <div class="col-md-12">
+            <div class="panel">
+              <p><img id="tree" src="{% static "assets/images/tree.jpg" %}" /></p>
+              <h3>ALL IN ONE - ONE TO ALL</h3>
+            </div>
+          </div>
+        </div>
+        
     	</div>
     </div>
 
